# SoftSysBarracuda

./: .gitignore  README.md
include/glad/: glad.h
reports/: proposal.md  report.md  update.md
src/: CMakeLists.txt  glad.c  main  main.c  objects.c  objects.h  try.ppm  vec3.c  vec3.h
