cmake_minimum_required(VERSION 3.10)
set(CMAKE_BUILD_TYPE Debug)

set(OpenGL_GL_PREFERENCE GLVND)
project(Renderer)
include_directories(../include)
add_executable(main main.c vec3.c objects.c)
find_package(glfw3 3.3 REQUIRED)
target_link_libraries(main glfw)
find_package(OpenGL REQUIRED)
target_link_libraries(main OpenGL::GL)
find_package(GLEW 2.1 REQUIRED)
target_link_libraries(main GLEW::GLEW)

target_link_libraries(main m)
